# rs_chat

./: Cargo.toml  Dockerfile  README.md  fly.toml
crates/client/: Cargo.toml
crates/client/src/: app.rs  inputs.rs  io.rs  lib.rs  main.rs  ui.rs
crates/client/src/app/: actions.rs  state.rs
crates/client/src/inputs/: key.rs  stateful_list.rs
crates/common/: Cargo.toml
crates/common/src/: client.rs  commands.rs  connection.rs  frame.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  server.rs  state.rs
