[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = { version = "4.0.18", features = ["derive"] }

tokio = { workspace = true }
futures = "0.3.25"
futures-timer = "3.0.2"

tui = "0.19.0"
crossterm = { version = "0.25.0", features = ["event-stream"] }
