[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.2.1"
thiserror = "1.0.37"
serde_json = "1.0.87"
