[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
thiserror = "1.0.37"
clap = { version = "4.0.18", features = ["derive"] }

tokio = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
